Fix issue with input form align #1161

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -89,6 +89,7 @@
 .ui.form input[type="tel"],
 .ui.form .ui.input {
   width: 100%;
+  vertical-align: top;
 }
 
 .ui.form input[type="text"],
